Fix qoutation source spacing

--- a/public/stylus/stylesheets/style.styl
+++ b/public/stylus/stylesheets/style.styl
@@ -253,6 +253,7 @@ h5
 .quotation-content
 	text-indent 40px
 	margin-top -20px
+	margin-bottom 0px
 .quotation-source
 	color #7e8080
 .blue-quotation-mark
